@@ -113,6 +113,7 @@ subprojects {
 
     compileJava {
         options.compilerArgs += ["--enable-preview",
+                                 "--add-modules=jdk.incubator.vector",
                                  "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
                                  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
                                  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
@@ -123,6 +124,7 @@ subprojects {
 
     compileTestJava {
         options.compilerArgs += ["--enable-preview",
+                                 "--add-modules=jdk.incubator.vector",
                                  "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
                                  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
                                  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
